--- a/styles/global.styl
+++ b/styles/global.styl
@@ -10,9 +10,14 @@ body
 #hnmain > tbody
     background-color light-purple 
 
+//inner page padding
+tbody > tr > td
+    padding-left 10px
+
 //navbar
 #hnmain > tbody > tr:nth-child(1) > td
     background-image linear-gradient(to right, #fa28a6, #c17bfd, #48b0ff, #00d4ff, #0aecf8)
+    padding 10px 0px
 
 //logo
 #hnmain > tbody > tr:nth-child(1) > td > table > tbody > tr > td:nth-child(1) > a > img
@@ -20,7 +25,7 @@ body
     opacity 50
 
 #pagespace
-    heigth 0px !important 
+    height 0px !important 
 
 //Line divider for footer
 #hnmain > tbody > tr:nth-child(4) > td > table > tbody > tr > td
@@ -38,6 +43,16 @@ span.pagetop
 span.pagetop > a
     color soft-white
 
+//navbar title
 span.pagetop > b > a
     color white !important
     font-size 18px
+
+//navbar button styling
+#hnmain > tbody > tr:nth-child(1) > td > table > tbody > tr > td:nth-child(3) > span > a
+    background-image linear-gradient(to top, #fc3ba1, #ff4f8f, #ff6581, #ff7a78, #ff8d75, #ff9870, #ffa36b, #ffaf69, #fcb85e, #f5c254, #eacd4c, #dcd848)
+    color #71422e
+    font-weight bold
+    padding 5px
+    border-radius 3px
+    font-family "Courier New", Courier, monospace
