--- a/styles/main.styl
+++ b/styles/main.styl
@@ -9,3 +9,8 @@
 @-moz-document domain("news.ycombinator.com")
     @require global
 
+@-moz-document url-prefix("https://news.ycombinator.com/news")
+    @require news
+
+@-moz-document url-prefix("https://news.ycombinator.com/item")
+    @require item
