updating selector for more broad usage

--- a/styles/news.styl
+++ b/styles/news.styl
@@ -17,7 +17,7 @@ td.subtext
     color orange
 
 //news article comments link
-td.subtext > a:nth-child(6)
+td.subtext > a[href^="item?id="]
     color cyan !important
 
 //padding for the top of the first article
