fixing root not having styles applies

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -10,7 +10,8 @@
     @require global
 
 @-moz-document url-prefix("https://news.ycombinator.com/news"),
-                url-prefix("https://news.ycombinator.com/ask")
+                url-prefix("https://news.ycombinator.com/ask"),
+                url-prefix("https://news.ycombinator.com/show")
     @require news
 
 @-moz-document url-prefix("https://news.ycombinator.com/item")
