--- a/styles/main.styl
+++ b/styles/main.styl
@@ -9,7 +9,8 @@
 @-moz-document domain("news.ycombinator.com")
     @require global
 
-@-moz-document url-prefix("https://news.ycombinator.com/news"),
+@-moz-document url-prefix("https://news.ycombinator.com"),
+                url-prefix("https://news.ycombinator.com/news"),
                 url-prefix("https://news.ycombinator.com/ask"),
                 url-prefix("https://news.ycombinator.com/show")
     @require news
