adding threads page styling

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -17,3 +17,6 @@
 
 @-moz-document url-prefix("https://news.ycombinator.com/item")
     @require item
+
+@-moz-document url-prefix("https://news.ycombinator.com/threads")
+    @require threads
