adding styling to the comments page

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -20,3 +20,6 @@
 
 @-moz-document url-prefix("https://news.ycombinator.com/threads")
     @require threads
+
+@-moz-document url-prefix("https://news.ycombinator.com/newcomments")
+    @require newcomments
