adding styles for reply page

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -23,3 +23,6 @@
 
 @-moz-document url-prefix("https://news.ycombinator.com/newcomments")
     @require newcomments
+
+@-moz-document url-prefix("https://news.ycombinator.com/reply")
+    @require reply
