--- a/styles/threads.styl
+++ b/styles/threads.styl
@@ -32,3 +32,7 @@ span.storyon > a
 //reply link/button for comments
 div.reply > p > font > u > a
     color cyan !important
+
+//edit link
+span.comhead > a[href*="edit?id="]
+    color cyan !important
