adding comments to reply styles

--- a/styles/reply.styl
+++ b/styles/reply.styl
@@ -65,11 +65,14 @@ form[action="comment"] > textarea
     font-weight bold
     font-family "Courier New", Courier, monospace
 
+// dividers in meta info x|x|
 span.comhead
     color orange
 
+//link to parent
 span.par > a
     color cyan
 
+//link to orignal article
 span.storyon > a
     color pink
