adding submit page

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -26,3 +26,6 @@
 
 @-moz-document url-prefix("https://news.ycombinator.com/reply")
     @require reply
+
+@-moz-document url-prefix("https://news.ycombinator.com/submit")
+    @require submit
