work on the user page

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -29,3 +29,6 @@
 
 @-moz-document url-prefix("https://news.ycombinator.com/submit")
     @require submit
+
+@-moz-document url-prefix("https://news.ycombinator.com/user")
+    @require user
