Fix: Made footer divider selector more specific as it also affected reply page divs

--- a/styles/global.styl
+++ b/styles/global.styl
@@ -28,7 +28,7 @@ tbody > tr > td
     height 0px !important 
 
 //Line divider for footer
-#hnmain > tbody > tr:nth-child(4) > td > table > tbody > tr > td
+#hnmain > tbody > tr:nth-child(4) > td > table > tbody > tr > td[bgcolor="#ff6600"]
     background-image linear-gradient(to right, #fa28a6, #c17bfd, #48b0ff, #00d4ff, #0aecf8)
 
 //footer links
