--- a/styles/global.styl
+++ b/styles/global.styl
@@ -56,3 +56,7 @@ span.pagetop > b > a
     padding 5px
     border-radius 3px
     font-family "Courier New", Courier, monospace
+
+//formatdoc text
+.admin td
+    color white
